--- a/section1.css
+++ b/section1.css
@@ -158,6 +158,7 @@ nav {
 
 .content {
   max-width: 60%;
+  
 }
 .text-span {
   color: #ff7f00;
@@ -375,11 +376,12 @@ a {
 @media (min-width: 1500px ) and (max-width: 2540px) {
   nav{
     width: 100%;
-    padding: 0px 300px;
+    padding: 0px 100px;
   }
   .hero{
-    padding: 0px 250px;
+    padding: 0px 150px;
     padding-right: 500px;
+    padding-right: 150px;
     font-size: 20px;
   }
   .login-form{
@@ -414,6 +416,9 @@ header{
     display: block;
     width: 200px;
     display: flex;
+  }
+  .content{
+    margin-top:-100px ;
   }
 }
 
